# mxr

./: .git-cliff.toml  .gitignore  .gitleaksignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  PRODUCT.md  README.md  SECURITY.md  TERMS.md  TODO.md  build.rs  deny.toml  install.sh  mxr.skill  release-please-config.json  security_audit_findings.md  security_audit_rubric.md  skills-lock.json
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/compose/: Cargo.toml
crates/compose/src/: attachments.rs  draft_codec.rs  editor.rs  email.rs  frontmatter.rs  lib.rs  parse.rs  private_tmp.rs  render.rs
crates/compose/src/snapshots/: mxr__mxr_compose__email__tests__reply_message_rfc822.snap  mxr__mxr_compose__parse__tests__fixture_headers__folded-flowed.snap  mxr__mxr_compose__parse__tests__fixture_headers__missing-content-type.snap  mxr__mxr_compose__parse__tests__fixture_headers__missing-message-id.snap  mxr__mxr_compose__parse__tests__fixture_headers__multipart-calendar.snap  mxr__mxr_compose__parse__tests__fixture_headers__nested-multipart.snap  mxr__mxr_compose__parse__tests__fixture_headers__rfc2231-attachment.snap  mxr__mxr_compose__parse__tests__fixture_headers__unsubscribe-oneclick.snap  mxr_compose__email__tests__multipart_attachment_rfc822.snap  mxr_compose__email__tests__reply_message_rfc822.snap  mxr_compose__parse__tests__fixture_headers__alternative-html-first.snap  mxr_compose__parse__tests__fixture_headers__duplicate-singletons.snap  mxr_compose__parse__tests__fixture_headers__encoded-words.snap  mxr_compose__parse__tests__fixture_headers__malformed-minimal.snap  mxr_compose__parse__tests__fixture_headers__quoted-local-group.snap  mxr_compose__parse__tests__folded_flowed_headers.snap  (+1 more)
crates/config/: Cargo.toml
crates/config/src/: defaults.rs  lib.rs  resolve.rs  secret_store.rs  snooze.rs  types.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  i18n.rs  id.rs  lib.rs  provider.rs  text.rs  time_parse.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bridge.rs  chimes.rs  cli.rs  handler.rs  ipc_client.rs  lib.rs  loops.rs  main.rs  output.rs  provider_credentials.rs  reindex.rs  semantic.rs  serve.rs  server.rs  snooze.rs  state.rs  test_fixtures.rs  unsubscribe.rs
crates/daemon/src/cli/: mod.rs  (+2 more)
crates/daemon/tests/: accounts_repair_cli.rs  activity_invariants.rs  archive_intelligence_cli.rs  cli_help.rs  cli_journey.rs  compose_check_cli.rs  daemon_lifecycle.rs  dial_stdio_cli.rs  live_gmail_e2e.rs  reset_cli.rs  stdio_server_cli.rs  timing_cadence_cli.rs
crates/deliveries/: Cargo.toml
crates/deliveries/src/: data.rs  extract.rs  heuristics.rs  lib.rs  lifecycle.rs  schema_org.rs  tracking.rs
crates/export/: Cargo.toml
crates/export/src/: json.rs  lib.rs  llm.rs  markdown.rs  mbox.rs
crates/humanizer/: Cargo.toml
crates/humanizer/src/: lib.rs
crates/keychain/: Cargo.toml
crates/keychain/src/: lib.rs
crates/list-unsubscribe/: Cargo.toml  README.md
crates/list-unsubscribe/src/: lib.rs
crates/list-unsubscribe/testdata/: README.md  coverage.md  schema.json
crates/list-unsubscribe/tests/: conformance.rs
crates/llm/: Cargo.toml
crates/llm/src/: demo.rs  lib.rs
crates/mail-parse/: Cargo.toml
crates/mail-parse/src/: lib.rs
crates/mail-query/: Cargo.toml  README.md
crates/mail-query/src/: ast.rs  display.rs  error.rs  lib.rs  options.rs  parser.rs  visitor.rs
crates/mail-query/testdata/: README.md  coverage.md  schema.json
crates/mail-query/tests/: conformance.rs  unit_tests.rs
crates/mail-threading/: Cargo.toml  README.md
crates/mail-threading/src/: lib.rs
crates/mail-threading/testdata/: README.md  rfc5256-coverage.md  schema.json
crates/mail-threading/tests/: conformance.rs
crates/mailbox-formats/: Cargo.toml  README.md
crates/mailbox-formats/src/: error.rs  lib.rs  lock.rs  raw_message.rs
crates/mailbox-formats/tests/: roundtrip.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/outbound/: Cargo.toml
crates/outbound/src/: attachments.rs  email.rs  lib.rs  render.rs
crates/protocol/: Cargo.toml
crates/protocol/proptest-regressions/: lib.txt
crates/protocol/src/: codec.rs  lib.rs  types.rs
crates/protocol/tests/: openapi.rs
crates/provider-fake/: Cargo.toml
crates/provider-fake/src/: conformance.rs  fixtures.rs  lib.rs
crates/provider-gmail/: Cargo.toml  build.rs
crates/provider-gmail/src/: auth.rs  auth_storage.rs  client.rs  cursor.rs  error.rs  labels.rs  lib.rs  parse.rs  provider.rs  send.rs  types.rs
crates/provider-gmail/tests/: live_smoke.rs
crates/provider-imap/: Cargo.toml
crates/provider-imap/src/: config.rs  cursor.rs  error.rs  folders.rs  lib.rs  parse.rs  session.rs  types.rs
crates/provider-imap/tests/: integration.rs  live_smoke.rs
crates/provider-outlook/: Cargo.toml  build.rs
crates/provider-outlook/src/: auth.rs  error.rs  lib.rs  smtp.rs
crates/provider-smtp/: Cargo.toml
crates/provider-smtp/src/: config.rs  lib.rs
crates/provider-smtp/tests/: live_smoke.rs
crates/reader/: Cargo.toml
crates/reader/src/: boilerplate.rs  html.rs  lib.rs  pipeline.rs  quotes.rs  signatures.rs  tracking.rs
crates/reader/tests/: integration.rs  standards.rs
crates/relationship/: Cargo.toml
crates/relationship/src/: commitments.rs  lib.rs  service.rs  stylometry.rs  summary.rs  user_voice.rs  voice_match.rs
crates/rules/: Cargo.toml
crates/rules/src/: action.rs  condition.rs  engine.rs  history.rs  lib.rs  shell_hook.rs
crates/safety/: Cargo.toml
crates/safety/src/: attachment.rs  commitments.rs  config.rs  lib.rs  pii.rs  recipients.rs  reply_all.rs  tone.rs
crates/safety/tests/: no_raw_secrets.rs
crates/search/: Cargo.toml
crates/search/src/: ast.rs  index.rs  lib.rs  parser.rs  query_builder.rs  saved.rs  schema.rs  service.rs  test_fixtures.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frontmatter.rs  fuzz_ipc_message.rs  fuzz_search_query.rs
(+1682 files in other folders)
