[package]
name = "mxr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A programmable, agent-native email client. One CLI across all your providers."
readme = "README.md"
# Distribution is via prebuilt binaries (Homebrew tap, GitHub Releases) and
# `cargo install --git`. We deliberately do NOT publish to crates.io: the
# internal `mxr-*` workspace crates are organizational seams, not library
# APIs. See AGENTS.md.
publish = false
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "build.rs",
    ".sqlx/**",
    "crates/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "mxr"
path = "crates/daemon/src/lib.rs"

[[bin]]
name = "mxr"
path = "crates/daemon/src/main.rs"

[[test]]
name = "cli_help"
path = "crates/daemon/tests/cli_help.rs"

[[test]]
name = "daemon_lifecycle"
path = "crates/daemon/tests/daemon_lifecycle.rs"

[[test]]
name = "reset_cli"
path = "crates/daemon/tests/reset_cli.rs"

[[test]]
name = "cli_journey"
path = "crates/daemon/tests/cli_journey.rs"

[[test]]
name = "live_gmail_e2e"
path = "crates/daemon/tests/live_gmail_e2e.rs"

[[test]]
name = "compose_check_cli"
path = "crates/daemon/tests/compose_check_cli.rs"

[[test]]
name = "timing_cadence_cli"
path = "crates/daemon/tests/timing_cadence_cli.rs"

[[test]]
name = "archive_intelligence_cli"
path = "crates/daemon/tests/archive_intelligence_cli.rs"

[[test]]
name = "activity_invariants"
path = "crates/daemon/tests/activity_invariants.rs"

[features]
# Default profile is intentionally minimal so CLI iteration is fast (~1m vs ~6m).
# Activate the full local-semantic stack with `--features semantic-local`.
default = []
semantic-local = ["local"]
local = ["mxr-semantic/local"]
# Embed the web SPA into the binary so `mxr web` serves it from the bridge.
# Build the SPA first: `cd apps/web && npm install && npm run build`.
web-ui = ["mxr-web/web-ui"]

[workspace]
resolver = "2"
members = [
    ".",
    "crates/compose",
    "crates/config",
    "crates/core",
    "crates/deliveries",
    "crates/export",
    "crates/keychain",
    "crates/humanizer",
    "crates/llm",
    "crates/mail-parse",
    "crates/outbound",
    "crates/protocol",
    "crates/provider-fake",
    "crates/provider-gmail",
    "crates/provider-imap",
    "crates/provider-outlook",
    "crates/provider-smtp",
    "crates/reader",
    "crates/relationship",
    "crates/rules",
    "crates/safety",
    "crates/search",
    "crates/semantic",
    "crates/store",
    "crates/sync",
    "crates/test-support",
    "crates/tui",
    "crates/web",
]
default-members = ["."]
exclude = [
    "examples/adapter-skeleton",
    "fuzz",
]

[workspace.package]
version = "0.5.37"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/planetaryescape/mxr"
homepage = "https://github.com/planetaryescape/mxr"
keywords = ["email", "terminal", "tui", "imap", "gmail"]
categories = ["email", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"
# Idiom lints, each driven to zero before enabling (see docs/idiomatic-rust.md).
# CI runs `clippy -- -D warnings`, so these are enforced and regression-proof.
uninlined_format_args = "warn"
map_unwrap_or = "warn"
or_fun_call = "warn"
redundant_closure_for_method_calls = "warn"
use_self = "warn"
manual_string_new = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
derive_partial_eq_without_eq = "warn"
significant_drop_in_scrutinee = "warn"

[workspace.dependencies]
mxr-compose = { path = "crates/compose", version = "0.5.18" }
mxr-config = { path = "crates/config", version = "0.5.18" }
mxr-core = { path = "crates/core", version = "0.5.18" }
mxr-deliveries = { path = "crates/deliveries", version = "0.5.18" }
mxr-export = { path = "crates/export", version = "0.5.18" }
mxr-keychain = { path = "crates/keychain", version = "0.5.18" }
mxr-humanizer = { path = "crates/humanizer", version = "0.5.18" }
mxr-llm = { path = "crates/llm", version = "0.5.18" }
mxr-mail-parse = { path = "crates/mail-parse", version = "0.5.18" }
mail-threading = "0.1.0"
list-unsubscribe = "0.1.0"
mail-query = "0.1.0"
mailbox-formats = "0.1.0"
mxr-outbound = { path = "crates/outbound", version = "0.5.18" }
mxr-protocol = { path = "crates/protocol", version = "0.5.18" }
mxr-provider-fake = { path = "crates/provider-fake", version = "0.5.18" }
mxr-provider-gmail = { path = "crates/provider-gmail", version = "0.5.18" }
mxr-provider-imap = { path = "crates/provider-imap", version = "0.5.18" }
mxr-provider-outlook = { path = "crates/provider-outlook", version = "0.5.18" }
mxr-provider-smtp = { path = "crates/provider-smtp", version = "0.5.18" }
mxr-reader = { path = "crates/reader", version = "0.5.18" }
mxr-relationship = { path = "crates/relationship", version = "0.5.18" }
mxr-rules = { path = "crates/rules", version = "0.5.18" }
mxr-safety = { path = "crates/safety", version = "0.5.18" }
mxr-search = { path = "crates/search", version = "0.5.18" }
mxr-semantic = { path = "crates/semantic", version = "0.5.18" }
mxr-store = { path = "crates/store", version = "0.5.18" }
mxr-sync = { path = "crates/sync", version = "0.5.18" }
mxr-test-support = { path = "crates/test-support", version = "0.5.18" }
mxr-tui = { path = "crates/tui", version = "0.5.18" }
mxr-web = { path = "crates/web", version = "0.5.18" }

glob-match = "0.2"
shell-words = "1.1"
which = "7"

# Package/delivery detection: carrier tracking-number identification + checksum
# validation (embeds the canonical tracking_number_data dataset).
tracking-numbers = "0.1.2"

# IMAP (fork with ENABLE/NAMESPACE support, published as mxr-async-imap)
async-imap = { package = "mxr-async-imap", version = "0.10.6" }
async-native-tls = "0.5"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }

# Search
tantivy = "0.22"

# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults", "tokio"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
tui-big-text = "0.8"

# Types
uuid = { version = "1", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
sha2 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# IPC framing
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1.3"

# Futures
futures = "0.3"

# Directories
dirs = "6"

# Config
toml = "0.8"

# Gmail/OAuth
yup-oauth2 = "11"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
keyring = { version = "3", features = ["apple-native"] }
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2"
base64 = "0.22"
mail-parser = "0.9"
icalendar = { version = "0.17.10", default-features = true }
url = "2"
scraper = "0.24"
data-url = "0.3"
mime_guess = "2"
mail-builder = "0.4.4"
open = "5"

# TUI extras
nucleo = "0.5"
unicode-width = "0.2"

# Reader
html2text = "0.14"
htmlescape = "0.3"
regex = "1"
once_cell = "1"

# Compose
serde_yaml = "0.9"
comrak = { version = "0.31", default-features = false, features = ["shortcodes"] }

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "pool", "smtp-transport"] }

# Testing
tempfile = "3"
wiremock = "0.6"
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
proptest = "1"

# OpenAPI / HTTP bridge
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[dependencies]
mxr-compose = { workspace = true }
mxr-config = { workspace = true }
mxr-core = { workspace = true }
mxr-deliveries = { workspace = true }
mxr-export = { workspace = true }
mxr-keychain = { workspace = true }
mxr-humanizer = { workspace = true }
mxr-llm = { workspace = true }
mxr-mail-parse = { workspace = true }
mxr-outbound = { workspace = true }
mxr-protocol = { workspace = true }
mxr-provider-fake = { workspace = true }
mxr-provider-gmail = { workspace = true }
mxr-provider-imap = { workspace = true }
mxr-provider-outlook = { workspace = true }
mxr-provider-smtp = { workspace = true }
mxr-reader = { workspace = true }
mxr-relationship = { workspace = true }
mxr-rules = { workspace = true }
mxr-safety = { workspace = true }
mxr-search = { workspace = true }
mxr-semantic = { workspace = true }
mxr-store = { workspace = true }
mxr-sync = { workspace = true }
mxr-tui = { workspace = true }
mxr-web = { workspace = true }

anyhow = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
comrak = { workspace = true, default-features = false, features = ["shortcodes"] }
crossterm = { workspace = true, features = ["event-stream"] }
csv = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
html2text = { workspace = true }
htmlescape = { workspace = true }
keyring = { workspace = true }
lettre = { workspace = true }
mail-parser = { workspace = true }
nucleo = { workspace = true }
once_cell = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
throbber-widgets-tui = "0.11.0"
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2" }
unicode-width = { workspace = true }
url = { workspace = true }
open = { workspace = true }
uuid = { workspace = true }
scraper = { workspace = true }
data-url = { workspace = true }
mime_guess = { workspace = true }
which = { workspace = true }
yup-oauth2 = { workspace = true }
parking_lot = { workspace = true }
image = { workspace = true }
nix = { version = "0.30", features = ["signal", "process"] }
inquire = "0.9.4"

[dev-dependencies]
assert_cmd = { workspace = true }
criterion = "0.5"
insta = { workspace = true }
mxr-test-support = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
proptest = "1"
temp-env = "0.3"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.28"
wiremock = { workspace = true }
zip = "2.4"

[[bench]]
name = "search_query"
harness = false

[[bench]]
name = "store_read"
harness = false

[[bench]]
name = "reader_pipeline"
harness = false

[[bench]]
name = "sync_overlap"
harness = false

[[bench]]
name = "semantic_ingest"
harness = false

[[bench]]
name = "daemon_burst"
harness = false

[[bench]]
name = "user_activity"
harness = false

[lints]
workspace = true
