[package]
name = "mxr-compose"
version = "0.4.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Email composition with EDITOR and YAML frontmatter for mxr"

[dependencies]
mxr-core = { workspace = true }
mxr-reader = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
comrak = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
lettre = { workspace = true }
mail-parser = { workspace = true }
url = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
mxr-test-support = { workspace = true }
insta = { workspace = true }
