[package]
name = "mxr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal: provider-agnostic types, traits, and IDs for the mxr email client"


[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
