[package]
name = "mxr-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mxr"
path = "src/main.rs"

[dependencies]
mxr-core = { workspace = true }
mxr-store = { workspace = true }
mxr-search = { workspace = true }
mxr-protocol = { workspace = true }
mxr-provider-fake = { workspace = true }
mxr-sync = { workspace = true }
mxr-tui = { path = "../tui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
