[package]
name = "mxr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A programmable, agent-native email client. One CLI across all your providers."
readme = "../../README.md"

[[bin]]
name = "mxr"
path = "src/main.rs"

[features]
default = ["semantic-local"]
semantic-local = ["mxr-semantic/local"]

[dependencies]
mxr-core = { workspace = true }
mxr-config = { workspace = true }
mxr-store = { workspace = true }
mxr-search = { workspace = true }
mxr-semantic = { workspace = true, default-features = false }
mxr-protocol = { workspace = true }
mxr-web = { workspace = true }
mxr-provider-fake = { workspace = true }
mxr-provider-gmail = { workspace = true }
mxr-provider-imap = { workspace = true }
mxr-provider-smtp = { workspace = true }
mxr-sync = { workspace = true }
mxr-compose = { workspace = true }
mxr-reader = { workspace = true }
mxr-export = { workspace = true }
mxr-rules = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
mxr-tui = { path = "../tui", version = "0.4.6" }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
which = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
mxr-test-support = { workspace = true }
tempfile = { workspace = true }
