[package]
name = "mxr-export"
version = "0.4.15"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Thread export (markdown, JSON, mbox, LLM context) for mxr"

[dependencies]
mxr-core = { workspace = true }
mxr-reader = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
mxr-test-support = { workspace = true }
insta = { workspace = true }
